# pyroflux

./: README.md  main.py  pyproject.toml
notebooks/: Coding Top.ipynb
notebooks/coding/: Coding Top.ipynb
notebooks/courses/Agent/: langgraph_demo.ipynb
notebooks/courses/LLM/: 01_LLaMA原理精讲与架构复现 v_0616.ipynb  02_GPT原理精讲与架构复现（lesson+1~3）.ipynb  03_多模态大模型(1)+CLIP-正课1+2.ipynb  从0到1训练 Part 1 数据收集与数据预处理 (updated).ipynb  从0到1训练 Part 2 MateConv Mini模型构建与预训练流程 (updated3).ipynb
src/pyroflux/: __init__.py
